[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "openclaw-skill-siyuan"
version = "0.1.0"
description = "OpenClaw skill package for SiYuan API integration."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
openclaw-skill-siyuan = "openclaw_skill_siyuan.server:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/openclaw_skill_siyuan"]
